WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122322
MediaStreamTrack can't be FINAL
https://bugs.webkit.org/show_bug.cgi?id=122322
Summary
MediaStreamTrack can't be FINAL
Philippe Normand
Reported
2013-10-04 02:26:54 PDT
Because AudioStreamTrack and VideoStreamTrack inherit from it.
Attachments
patch
(3.29 KB, patch)
2013-10-04 02:29 PDT
,
Philippe Normand
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2013-10-04 02:29:58 PDT
Created
attachment 213343
[details]
patch
Alexey Proskuryakov
Comment 2
2013-10-04 10:20:18 PDT
Comment on
attachment 213343
[details]
patch Are there any methods in these classes that can be final?
Darin Adler
Comment 3
2013-10-04 17:43:34 PDT
Comment on
attachment 213343
[details]
patch How did this even compile? Can any of the virtual functions in MediaStreamTrack be FINAL? If the entire class isn’t FINAL, it then becomes helpful to mark the functions themselves FINAL if there is no need to override them. r=me but I suggest adding some FINAL to any functions we don’t need to override.
Eric Carlson
Comment 4
2013-10-06 20:47:15 PDT
I have a fix for this in the massive patch attached to
https://bugs.webkit.org/show_bug.cgi?id=121940
if you want to let me take care of this.
Philippe Normand
Comment 5
2013-10-07 00:06:00 PDT
I was thinking of landing this patch with the updates Darin and Alexey suggested. (In reply to
comment #3
)
> (From update of
attachment 213343
[details]
) > How did this even compile? >
It didn't :) Currently no port enables mediastream in their default build. Last week I started working on the GStreamer mediastream backend some other folks started some months ago. One part is in
Bug 110150
but I haven't yet uploaded the version that actually builds.
Philippe Normand
Comment 6
2013-10-07 00:28:31 PDT
Committed
r157030
: <
http://trac.webkit.org/changeset/157030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug