MediaStreamTrack can't be FINAL https://bugs.webkit.org/show_bug.cgi?id=122322

Reviewed by Darin Adler.

Marked the MediaStreamTrack subclasses as final.

* Modules/mediastream/AudioStreamTrack.h:
* Modules/mediastream/MediaStreamTrack.h:
* Modules/mediastream/VideoStreamTrack.h:

Canonical link: https://commits.webkit.org/140502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157030 268f45cc-cd09-0410-ab3c-d52691b4dbfc